Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-61736

Intermittent failure EPBucketFullEvictionTest.BgfetchSucceedsUntilMutationWatermark

    XMLWordPrintable

Details

    Description

      https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/29374/

       [ RUN      ] FullEviction/EPBucketFullEvictionTest.BgfetchSucceedsUntilMutationWatermark/magma_persistent_full_eviction
      17:24:46  /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:768: Failure
      17:24:46  Expected equality of these values:
      17:24:46    1
      17:24:46    numSucess
      17:24:46      Which is: 0
      17:24:46  
      17:24:46  /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:769: Failure
      17:24:46  Expected equality of these values:
      17:24:46    1
      17:24:46    numFailure
      17:24:46      Which is: 2
      17:24:46  
      17:24:46  [  FAILED  ] FullEviction/EPBucketFullEvictionTest.BgfetchSucceedsUntilMutationWatermark/magma_persistent_full_eviction, where GetParam() = "backend=magma:bucket_type=persistent:item_eviction_policy=full_eviction:compaction_expiry_fetch_inline=false" (89 ms) 

      Attachments

        Issue Links

          For Gerrit Dashboard: MB-61736
          # Subject Branch Project Status CR V

          Activity

            People

              mohammad.zaeem Mohammad Zaeem
              mohammad.zaeem Mohammad Zaeem
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty